Fixed the text so that it doesnt wrap and the width stays 100%

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,19 @@
   }
 }
 
+@media (max-width: 768px) {
+  h1.text-9xl {
+    font-size: 4rem; /* Adjust the font size to fit the text on one line */
+  }
+}
+
+@media (max-width: 640px) {
+  h1.text-9xl {
+    font-size: 3rem; /* Further adjust the font size for even smaller screens */
+  }
+
+}
+
 
 .tiptap {
   > * + * {
